--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 	</div>
 
 	<div id="replayDiv">
-		<img src="circle.png" id="replayCircle">
-		<h3>Zerar</h3>
+		<h3 id="replay">Zerar</h3>
 	</div>
 
 	<script type="text/javascript">
@@ -54,7 +53,7 @@
 				updateScore();
 			};
 
-			document.getElementById('replayCircle').onclick = function() {
+			document.getElementById('replay').onclick = function() {
 				score1 = 0;
 				score2 = 0;
 				updateScore();
