--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
-	<title> Portfólio </title>
+	<title> Contador </title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<meta charset="utf-8"/>
 </head>
