--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title> Contador </title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<meta charset="utf-8"/>
+	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 <body>
 	<h1>CONTADOR</h1>
