--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 	<title> Portfólio </title>
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"> 
 	<meta charset="utf-8"/>
 </head>
 <body>
