--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<meta charset="utf-8"/>
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+<meta name="viewport" content="width=device-width">
 	 
 </head>
 <body>
@@ -45,7 +46,7 @@
 
 			document.getElementById('up2').onclick = function() {
 				if (score2 < 24)
-					score2++;
+F					score2++;
 				updateScore();
 			};
 
