--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
 				document.getElementById('s1').innerHTML = score1;
 				document.getElementById('s2').innerHTML = score2;			
 			};
+			
+			var doubleTouchStartTimestamp = 0;
+			document.addEventListener("touchstart", function (event) {
+			    var now = +(new Date());
+			    if (doubleTouchStartTimestamp + 500 > now) {
+			        event.preventDefault();
+			    }
+			    doubleTouchStartTimestamp = now;
+			});
 		};
 		</script>
 
